--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "mongoose": "^8.4.1",
         "ms": "^2.1.3",
         "node-fetch": "^3.3.2",
-        "whatwg-url": "^14.0.0"
+        "whatwg-url": "^14.0.0",
+        "ws": "^8.17.1"
     }
 }
